unpackaged/objects/Buy__c.object
<CustomObject>
    <fields>
        <fullName>CashRegister__c</fullName>
        <label>Cash Register</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Buys</relationshipLabel>
        <relationshipName>Buys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>Date And Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Responsible Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Buys</relationshipLabel>
        <relationshipName>Buys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TradingPoint__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trading Point</label>
        <referenceTo>TradingPoint__c</referenceTo>
        <relationshipLabel>Buys</relationshipLabel>
        <relationshipName>Buys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Buy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>